--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "mongoose": "^4.11.5"
   },
   "engines": {
     "node": "8.x"
