--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "//1": "describes your app and its dependencies",
   "//2": "https://docs.npmjs.com/files/package.json",
   "//3": "updating this file will download and update your packages",
-  "name": "my-glitch-app",
-  "version": "1.0.0",
-  "description": "What am I about?",
+  "name": "url-shortener-microservice",
+  "ve0sion""description": "Simple shortener for those out of control URLs",am I about?",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.15.3",
-    "mongoose": "^4.11.5"
+    "mongoos
+    "shortid": "^2.2.8"e": "^4.11.5",
+    "shortid": "^2.2.8"
   },
   "engines": {
     "node": "8.x"
