--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
-  "//1": "describes your app and its dependencies",
-  "//2": "https://docs.npmjs.com/files/package.json",
-  "//3": "updating this file will download and update your packages",
   "name": "url-shortener-microservice",
-  "ve0sion""description": "Simple shortener for those out of control URLs",am I about?",
+  "version": "1.0.1",
+  "description": "Simple url shortener when copying and pasting simply is not an option",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
   "dependencies": {
-    "express": "^4.15.3",
-    "mongoos
-    "shortid": "^2.2.8"e": "^4.11.5",
+    "mongoose": "^4.11.5",
     "shortid": "^2.2.8"
   },
-  "engines": {
-    "node": "8.x"
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
-    "url": "https://glitch.com/edit/#!/welcome-project"
+    "type": "git",
+    "url": "git+https://github.com/ColtonJD/url-shortener-microservice.git"
   },
-  "license": "MIT",
   "keywords": [
+    "express",
     "node",
-    "glitch",
-    "express"
+    "shortid",
+    "mongodb",
+    "mongoose"
   ],
-  "devDependencies": {},
-  "author": "Colton Dale"
+  "author": "Colton J Dale",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/ColtonJD/url-shortener-microservice/issues"
+  },
+  "homepage": "https://github.com/ColtonJD/url-shortener-microservice#readme"
 }
